# ci_test

./: CMakeLists.txt  main.c
.github/workflows/: blank.yml
SDL/android-project/: local.properties
SDL/android-project/app/jni/: CMakeLists.txt
SDL/android-project/app/jni/src/: CMakeLists.txt
SDL/src/test/: SDL_test_assert.c
SDL_image/: CHANGES.txt
SDL_image/VisualC/: SDL_image.vcxproj
